--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -12,7 +12,7 @@
 
 <body>
   <ng-progress #progressBar></ng-progress>
-  <mat-drawer-container autosize>
+  <mat-drawer-container autosize *ngIf="loggedIn">
     <mat-drawer #sidenav [opened]="sidenavOpenState" mode="side">
       <app-sidenav-list (sidenavClose)="sidenav.close()"></app-sidenav-list>
     </mat-drawer>
@@ -20,7 +20,6 @@
     <main>
       <router-outlet></router-outlet>
     </main>
-
   </mat-drawer-container>
 </body>
 
