--- a/client/src/app/modules/accounting/components/accounting.component.html
+++ b/client/src/app/modules/accounting/components/accounting.component.html
@@ -1,3 +1,8 @@
-<p>
-  accounting works!
-</p>
+<div>
+  <mat-tab-group animationDuration="0ms" #tabs>
+    <mat-tab label="Ecritures">
+      <accounting-record>
+      </accounting-record>
+    </mat-tab>
+  </mat-tab-group>
+</div>
