--- a/client/src/app/modules/miscellaneous/components/forms/autocomplete-accounting-account/autocomplete-accounting-account.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/autocomplete-accounting-account/autocomplete-accounting-account.component.html
@@ -1,7 +1,10 @@
-<mat-form-field class="full-width" [formGroup]="form!">
+<mat-form-field [class]="matFormFieldClass" [formGroup]="form!">
   <mat-label>{{label}}</mat-label>
   <input matInput [placeholder]="label" [matAutocomplete]="autoCompleteAccountingAccount"
     [formControlName]="propertyName" autocomplete="do-not-autofill">
+  <mat-icon matSuffix (click)="clearField()" *ngIf="!isDisabled && model!=undefined" class="pointer">
+    close
+  </mat-icon>
   <mat-autocomplete autoActiveFirstOption #autoCompleteAccountingAccount="matAutocomplete" [displayWith]="displayLabel"
     (optionSelected)='optionSelected($event.option.value)'>
     <mat-option *ngFor="let accountingAccount of filteredTypes" [value]="accountingAccount">
