--- a/client/src/app/modules/miscellaneous/components/forms/select-accounting-journal/select-accounting-journal.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/select-accounting-journal/select-accounting-journal.component.html
@@ -6,4 +6,7 @@
       {{type.label}}
     </mat-option>
   </mat-select>
+  <button *ngIf="model" mat-button matSuffix mat-icon-button (click)="clearField();$event.stopPropagation()">
+    <mat-icon>close</mat-icon>
+  </button>
 </mat-form-field>
