--- a/client/src/app/modules/accounting/components/accounting.component.html
+++ b/client/src/app/modules/accounting/components/accounting.component.html
@@ -7,6 +7,9 @@
     <mat-tab label="Balances">
       <accounting-balance></accounting-balance>
     </mat-tab>
+    <mat-tab label="Balances générales">
+      <accounting-balance-generale></accounting-balance-generale>
+    </mat-tab>
     <mat-tab label="Bilan">
       <accounting-bilan></accounting-bilan>
     </mat-tab>
