--- a/client/src/app/modules/administration/components/referentials/referential-team/referential-team.component.html
+++ b/client/src/app/modules/administration/components/referentials/referential-team/referential-team.component.html
@@ -5,23 +5,9 @@
     </mat-form-field>
   </div>
   <div class="table-container-scroll">
-    <table mat-table matSort [dataSource]="entityDataSource" class="table">
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Identifiant technique</th>
-        <td mat-cell *matCellDef="let element">{{element.id}}</td>
-      </ng-container>
-      <ng-container matColumnDef="code">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Codification</th>
-        <td mat-cell *matCellDef="let element">{{(getElementCode(element)? getElementCode(element):"")}}</td>
-      </ng-container>
-      <ng-container matColumnDef="label">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nom fonctionnal</th>
-        <td mat-cell *matCellDef="let element">{{(getElementLabel(element)? getElementLabel(element):"")}}</td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row class="pointer" [ngClass]="{'selected-mat-row':selectedEntity && selectedEntity.id==row.id}"
-        *matRowDef="let row; columns: displayedColumns;" (click)="selectEntity(row)"></tr>
-    </table>
+    <sort-table [columns]="displayedColumns" (onRowClick)="selectEntity($event)" [values]="entities"
+      tableName="Référentiel " [filterText]="searchText">
+    </sort-table>
   </div>
 </div>
 <div class="mat-elevation-z2 form-div" *ngIf="selectedEntity ">
