--- a/client/src/app/modules/tiers/components/tiers-followup/tiers-followup.component.html
+++ b/client/src/app/modules/tiers/components/tiers-followup/tiers-followup.component.html
@@ -49,33 +49,6 @@
         <mat-icon>event</mat-icon>
       </button></span>
   </div>
-  <table mat-table matSort [dataSource]="followupDataSource" class="table">
-    <ng-container matColumnDef="followupDate">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Date</th>
-      <td mat-cell *matCellDef="let element">{{element.followupDate | date:'dd/MM/yyyy'}}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Type</th>
-      <td mat-cell *matCellDef="let element">{{element.tiersFollowupType.label}}</td>
-    </ng-container>
-    <ng-container matColumnDef="salesEmployee">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Par</th>
-      <td mat-cell *matCellDef="let element">{{element.salesEmployee!=null
-        ?element.salesEmployee.firstname:""}}
-        {{element.salesEmployee!=null
-        ?element.salesEmployee.lastname:""}}</td>
-    </ng-container>
-    <ng-container matColumnDef="gift">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Cadeau</th>
-      <td mat-cell *matCellDef="let element">{{element.gift!=null
-        ?element.gift.label:""}}</td>
-    </ng-container>
-    <ng-container matColumnDef="observations">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Observations</th>
-      <td mat-cell *matCellDef="let element">{{element.observations}}</td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row class="pointer" *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+  <sort-table [columns]="displayedColumns" [values]="tiers.tiersFollowups" tableName="Cadeaux"
+    [filterText]="searchText"></sort-table>
 </div>
