--- a/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
+++ b/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
@@ -9,54 +9,9 @@
       </button></span>
   </div>
   <div class="table-container-scroll">
-    <table mat-table matSort [dataSource]="responsableDataSource" class="table">
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>N° du responsable</th>
-        <td mat-cell *matCellDef="let element">{{element.id}}</td>
-      </ng-container>
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nom</th>
-        <td mat-cell *matCellDef="let element">{{(element.firstname !=null ? element.firstname:"") + " " +
-          (element.lastname!=null?element.lastname:"")}}</td>
-      </ng-container>
-      <ng-container matColumnDef="address">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Adresse</th>
-        <td mat-cell *matCellDef="let element">{{element.address}}</td>
-      </ng-container>
-      <ng-container matColumnDef="city">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Ville</th>
-        <td mat-cell *matCellDef="let element">{{(element.city!=undefined ?element.city.label:"")}}</td>
-      </ng-container>
-      <ng-container matColumnDef="salesEmployee">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Commercial</th>
-        <td mat-cell *matCellDef="let element">{{(element.salesEmployee!=undefined?element.salesEmployee.firstname:"") +
-          "
-          " +
-          (element.salesEmployee!=undefined?element.salesEmployee.lastname:"")}}</td>
-      </ng-container>
-      <ng-container matColumnDef="formalisteEmployee">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Formaliste</th>
-        <td mat-cell *matCellDef="let element">
-          {{(element.formalisteEmployee!=undefined?element.formalisteEmployee.firstname:"") + " " +
-          (element.formalisteEmployee!=undefined?element.formalisteEmployee.lastname:"")}}
-      </ng-container>
-      <ng-container matColumnDef="insertionEmployee">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Publiciste</th>
-        <td mat-cell *matCellDef="let element">
-          {{(element.insertionEmployee!=undefined?element.insertionEmployee.firstname:"") + " " +
-          (element.insertionEmployee!=undefined?element.insertionEmployee.lastname:"")}}</td>
-      </ng-container>
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-        <td mat-cell *matCellDef="let element">
-          <mat-icon *ngIf="element.id==null && editMode" color="accent" (click)="deleteResponsable(element)">delete
-          </mat-icon>
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row class="pointer" [ngClass]="{'selected-mat-row':selectedResponsable==row}"
-        *matRowDef="let row; columns: displayedColumns;" (click)="selectResponsable(row.id)"></tr>
-    </table>
+    <sort-table [columns]="displayedColumns" (onRowClick)="selectResponsable($event)" [values]="tiers.responsables"
+      tableName="Responsables" [filterText]="searchText" [actions]="tableActions"
+      [idRowSelected]="selectedResponsable?selectedResponsable.id:undefined"></sort-table>
   </div>
   <div [hidden]="selectedResponsable==null" class="responsable-tabs">
     <form [formGroup]="principalForm" *ngIf="selectedResponsable!=null">
