--- a/client/src/app/modules/miscellaneous/components/attachments/attachments.component.html
+++ b/client/src/app/modules/miscellaneous/components/attachments/attachments.component.html
@@ -8,26 +8,10 @@
         <mat-icon>add</mat-icon>
       </button>
     </div>
-    <table mat-table matSort [dataSource]="tiersAttachmentDataSource" class="table">
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nom</th>
-        <td mat-cell *matCellDef="let element">{{element.uploadedFile.filename}}</td>
-      </ng-container>
-      <ng-container matColumnDef="attachementType">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Type de document</th>
-        <td mat-cell *matCellDef="let element">{{element.attachmentType.label}}</td>
-      </ng-container>
-      <ng-container matColumnDef="createdBy">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Ajouté par</th>
-        <td mat-cell *matCellDef="let element">{{element.uploadedFile.createdBy!=null
-          ?element.uploadedFile.createdBy:""}}</td>
-      </ng-container>
-      <ng-container matColumnDef="creationDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Ajouté le</th>
-        <td mat-cell *matCellDef="let element">{{element.uploadedFile.creationDate | date:'dd/MM/yyyy à HH:mm'}}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="action">
+    <sort-table [columns]="displayedColumns" [values]="entity.attachments" tableName="Pièce jointes"
+      [filterText]="searchText">
+    </sort-table>
+    <!--ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
           <mat-icon (click)="previewFile(element)" color="accent" matTooltip="Prévisualiser le fichier">preview
@@ -37,10 +21,7 @@
           <mat-icon (click)="disableFile(element)" color="accent" matTooltip="Désactiver le fichier">block
           </mat-icon>
         </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row class="pointer" *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+      </ng-container-->
   </div>
 </div>
 <div class="mat-elevation-z2 form-div" *ngIf="entity && (entity.id==undefined || entity.id==null)">
