--- a/client/src/app/modules/miscellaneous/components/history/history.component.html
+++ b/client/src/app/modules/miscellaneous/components/history/history.component.html
@@ -5,40 +5,7 @@
         <input matInput (keyup)="applyFilter($event.target)" placeholder="Rechercher">
       </mat-form-field>
     </div>
-    <table mat-table matSort [dataSource]="auditDataSource" class="table">
-      <ng-container matColumnDef="fieldName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Champ</th>
-        <td mat-cell *matCellDef="let element">{{getFieldLabel(element.fieldName)}}</td>
-      </ng-container>
-      <ng-container matColumnDef="oldValue">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Ancienne valeur</th>
-        <td mat-cell *matCellDef="let element">{{parseValues(element.oldValue)}}</td>
-      </ng-container>
-      <ng-container matColumnDef="newValue">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nouvelle valeur</th>
-        <td mat-cell *matCellDef="let element">{{parseValues(element.newValue)}}</td>
-      </ng-container>
-      <ng-container matColumnDef="createdBy">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Auteur</th>
-        <td mat-cell *matCellDef="let element">{{element.username!=null
-          ?element.username:""}}</td>
-      </ng-container>
-      <ng-container matColumnDef="creationDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Modifié le</th>
-        <td mat-cell *matCellDef="let element">{{element.datetime | date:'dd/MM/yyyy à HH:mm'}}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="actions" *ngIf="internalHistoryActions.length>0">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-        <td mat-cell *matCellDef="let element">
-          <mat-icon *ngFor="let historyAction of internalHistoryActions "
-            (click)="historyActionTrigger(historyAction,element)" color="accent"
-            [matTooltip]="historyAction.actionTooltip">{{historyAction.actionIcon}}
-          </mat-icon>
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row class="pointer" *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
+    <sort-table [columns]="displayedColumns" [values]="audits" tableName="Historique" [filterText]="searchText">
+    </sort-table>
   </div>
 </div>
