--- a/client/src/app/modules/miscellaneous/components/sort-table/sort-table.component.html
+++ b/client/src/app/modules/miscellaneous/components/sort-table/sort-table.component.html
@@ -9,9 +9,20 @@
           <grade [grade]="getColumnValue(column, element)"></grade>
         </span></td>
     </ng-container>
+    <ng-container matColumnDef="actions" *ngIf="internalActions">
+      <th mat-header-cell mat-sort-header *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element">
+        <ng-container *ngFor="let action of actions">
+          <mat-icon [matTooltip]="action.actionName" *ngIf="action.display" color="accent"
+            (click)="actionTrigger(action, element)">{{action.actionIcon}}
+          </mat-icon>
+        </ng-container>
+      </td>
+    </ng-container>
     <tr mat-header-row *matHeaderRowDef="getDisplayedColumns()"></tr>
     <tr mat-row *matRowDef="let row; columns: getDisplayedColumns();" (click)="rowClicked(row)"
-      [ngClass]="{'pointer':onRowClick && onRowClick.observers && onRowClick.observers.length>0}"></tr>
+      [ngClass]="{'pointer':onRowClick && onRowClick.observers && onRowClick.observers.length>0, 'selected-mat-row':idRowSelected && row.id && idRowSelected==row.id}">
+    </tr>
   </table>
   <mat-icon class="export-icon pointer" matTooltip="Exporter en Excel"
     (click)="exporter.exportTable('xlsx', {fileName:tableName, sheet: tableName,ignoreEC:false})">file_download
