--- a/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
+++ b/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
@@ -47,7 +47,7 @@
         <th mat-header-cell *matHeaderCellDef>Crédit</th>
         <td mat-cell *matCellDef="let element">{{element.credit}} €</td>
       </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumnsTotal" class="mat-header-row-small"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumnsTotal"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumnsTotal;"></tr>
     </table>
   </div>
