--- a/client/src/app/modules/accounting/components/accounting/accounting.component.html
+++ b/client/src/app/modules/accounting/components/accounting/accounting.component.html
@@ -7,7 +7,7 @@
     <mat-tab label="Balances">
       <accounting-balance></accounting-balance>
     </mat-tab>
-    <mat-tab label="Balances générales">
+    <mat-tab label="Balance générale">
       <accounting-balance-generale></accounting-balance-generale>
     </mat-tab>
     <mat-tab label="Bilan">
