--- a/client/src/app/modules/miscellaneous/components/sort-table/sort-table.component.css
+++ b/client/src/app/modules/miscellaneous/components/sort-table/sort-table.component.css
@@ -4,7 +4,7 @@
 
 .export-icon {
   position: absolute;
-  top: 15px;
+  top: 3px;
   right: 5px;
   color: white;
   transform: scale(0.66);
@@ -12,7 +12,7 @@
 
 .column-icon {
   position: absolute;
-  top: 15px;
+  top: 3px;
   right: 30px;
   color: white;
   transform: scale(0.66);
@@ -32,4 +32,11 @@ td {
 
 tr.mat-row {
   height: 20px;
+}
+
+.td-label {
+  white-space: nowrap;
+  max-width: 120px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
