start association invoice reglement

--- a/client/src/app/modules/invoicing/components/invoice-list/invoice-list.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-list/invoice-list.component.html
@@ -21,6 +21,7 @@
         </td>
       </tr>
     </table>
-    <sort-table [columns]="displayedColumns" [values]="invoices" tableName="Ecritures"></sort-table>
+    <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="invoices" tableName="Ecritures">
+    </sort-table>
   </div>
 </div>
