add table of quotation and customer order

--- a/client/src/app/modules/invoicing/components/invoice-list/invoice-list.component.html
+++ b/client/src/app/modules/invoicing/components/invoice-list/invoice-list.component.html
@@ -21,7 +21,7 @@
         </td>
       </tr>
     </table>
-    <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="invoices" tableName="Ecritures">
+    <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="invoices" tableName="Factures">
     </sort-table>
   </div>
 </div>
