--- a/client/src/app/modules/invoicing/components/payment-list/payment-list.component.html
+++ b/client/src/app/modules/invoicing/components/payment-list/payment-list.component.html
@@ -20,7 +20,7 @@
         </td>
       </tr>
     </table>
-    <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="payments" tableName="Ecritures">
+    <sort-table [actions]="tableAction" [columns]="displayedColumns" [values]="payments" tableName="Paiements">
     </sort-table>
     <div>
       <h2>Ajouter un paiement (pour tests)</h2>
